--- a/StudyNotes/Re-Study-iOS/Business/Podfile
+++ b/StudyNotes/Re-Study-iOS/Business/Podfile
@@ -6,7 +6,7 @@ target 'Business' do
   use_frameworks!
 
   pod 'INTULocationManager'
-  pod 'BaiduMapKit'
+#  pod 'BaiduMapKit'
   pod 'JPush'
   pod 'UMCCommon'
   pod 'UMCSecurityPlugins'
