--- a/StudyNotes/Re-Study-iOS/Business/Podfile
+++ b/StudyNotes/Re-Study-iOS/Business/Podfile
@@ -17,6 +17,7 @@ target 'Business' do
 #  pod 'WoodPeckeriOS'
   pod 'FMDB'
 #  pod 'OOMDetector'
+  pod 'WebViewJavascriptBridge'
   # Pods for Business
 
 end
