--- a/StudyNotes/iOS Collection/Business/Business/Info.plist
+++ b/StudyNotes/iOS Collection/Business/Business/Info.plist
@@ -82,6 +82,8 @@
 	<string>Microphone Description</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Motion Description</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Face ID Description</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
