--- a/StudyNotes/Swift Note/LiveBroadcast/Client/Podfile
+++ b/StudyNotes/Swift Note/LiveBroadcast/Client/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
 target 'LiveBroadcast' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
@@ -8,5 +8,6 @@ target 'LiveBroadcast' do
   # Pods for LiveBroadcast
   pod 'Alamofire'
   pod 'Kingfisher'
+  pod 'ProtocolBuffers-Swift'
   
 end
