--- a/StudyNotes/Swift Note/LiveBroadcast/Client/Podfile
+++ b/StudyNotes/Swift Note/LiveBroadcast/Client/Podfile
@@ -9,5 +9,6 @@ target 'LiveBroadcast' do
   pod 'Alamofire'
   pod 'Kingfisher'
   pod 'ProtocolBuffers-Swift'
-  pod 'GPUImage'
+#  pod 'GPUImage'
+  pod 'LFLiveKit'
 end
