--- a/StudyNotes/Componentization/Podfile
+++ b/StudyNotes/Componentization/Podfile
@@ -1,11 +1,15 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '9.0'
 
+source 'https://github.com/CocoaPods/Specs.git'
+source 'git@git.dev.tencent.com:dtid_ada36270f1f70012/ComponentSpecs.git'
+
 target 'Componentization' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
 
   # Pods for Componentization
-  pod 'BaseComponent', :path => './LocalPrivateLib/BaseComponent'
+  # pod 'BaseComponent', :path => './LocalPrivateLib/BaseComponent'
+  pod 'BaseComponent'
 
 end
