--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "StudyNotes/Componentization/RemotePrivateLib/BaseComponent"]
 	path = StudyNotes/Componentization/RemotePrivateLib/BaseComponent
-	url = https://git.dev.tencent.com/dtid_ada36270f1f70012/BaseComponent.git
+	url = https://git.dev.tencent.com/dtid_ada36270f1f70012/BaseComponent
+[submodule "BaseComponent"]
+	path = BaseComponent
+	url = https://git.dev.tencent.com/dtid_ada36270f1f70012/BaseComponent
