--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "BaseComponent"]
 	path = BaseComponent
 	url = https://git.dev.tencent.com/dtid_ada36270f1f70012/BaseComponent
+[submodule "StudyNotes/Componentization/RemotePrivateLib/--force"]
+	path = StudyNotes/Componentization/RemotePrivateLib/--force
+	url = https://git.dev.tencent.com/dtid_ada36270f1f70012/BaseComponent
