--- a/StudyNotes/Componentization/Podfile
+++ b/StudyNotes/Componentization/Podfile
@@ -14,4 +14,5 @@ target 'Componentization' do
   # pod 'BaseComponent', :subspecs => ['Base', 'Category']
   
   pod 'MainComponent'
+  pod 'DownloadListenComponent'
 end
