--- a/StudyNotes/ReactiveCocoa/Podfile
+++ b/StudyNotes/ReactiveCocoa/Podfile
@@ -1,10 +1,14 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '9.0'
+
+source 'https://github.com/CocoaPods/Specs.git'
+source 'git@git.dev.tencent.com:dtid_ada36270f1f70012/ComponentSpecs.git'
 
 target 'ReactiveCocoa' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
 
   # Pods for ReactiveCocoa
+  pod 'HomeKit'
 
 end
