--- a/StudyNotes/Swift Collection/Swiftful Thinking/[Intermediate Level] SwiftUI + Firebase/SwiftfulFirebaseBootcamp/GoogleService-Info.plist
+++ b/StudyNotes/Swift Collection/Swiftful Thinking/[Intermediate Level] SwiftUI + Firebase/SwiftfulFirebaseBootcamp/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>923437204981-ehgvk86mbtrgsibhqkn8q9jtu7of93vq.apps.googleusercontent.com</string>
+	<string>923437204981-4c6voku81k3f2r3ub0eebdq10ukpdpt4.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.923437204981-ehgvk86mbtrgsibhqkn8q9jtu7of93vq</string>
+	<string>com.googleusercontent.apps.923437204981-4c6voku81k3f2r3ub0eebdq10ukpdpt4</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCPjYPpLKC_VVVPIMR4z41JTDBuski64Tk</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>coderZsq.SwiftfulFirebaseBootcamp</string>
+	<string>cn.volvocars.onCall.uat</string>
 	<key>PROJECT_ID</key>
 	<string>swiftfulfirebasebootcamp-44ca5</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:923437204981:ios:e3ad405e56d6136a074cbc</string>
+	<string>1:923437204981:ios:0a7e214081f68d00074cbc</string>
 </dict>
 </plist>
